# name-needed

./: .gitattributes  .gitignore  .rustfmt.toml  .travis-install-bullet.sh  .travis-install-sdl2.sh  .travis-install-sfml.sh  .travis.yml  Cargo.toml  LICENSE  PROGRESS.md  README.md  TODOS.md  config.ron  script.lua
ai/: Cargo.toml
ai/ai-curve-vis/: Cargo.toml
ai/ai-curve-vis/src/: main.rs
ai/src/: consideration.rs  decision.rs  intelligence.rs  lib.rs
common/: Cargo.toml
common/src/: input.rs  lib.rs
engine/: Cargo.toml
engine/shaders/: debug.glslv  entity.glslv  lines.glslv
engine/src/: camera.rs  engine.rs  lib.rs  lite.rs  main.rs  render.rs
engine/src/render/: camera.rs  debug.rs  mod.rs  renderer.rs  simulation.rs
game/: Cargo.toml
game-presets/: Cargo.toml
game-presets/src/: dev.rs  empty.rs  lib.rs
game/ai/: Cargo.toml
game/ai/src/: consideration.rs  context.rs  decision.rs  intelligence.rs  lib.rs
game/markov/: Cargo.toml
game/markov/src/: lib.rs  load.rs  main.rs
game/physics/: Cargo.toml
game/physics/bulletc-sys/: Cargo.toml  build.rs
game/physics/bulletc-sys/bulletc/: CMakeLists.txt  bulletc.hpp  debug.cpp  debug.hpp
game/physics/debug-draw/: Cargo.toml
game/physics/debug-draw/src/: lib.rs
game/procgen/: Cargo.toml  biomes.ron  procgen.txt
game/procgen/benches/: region.rs
game/procgen/src/: biome.rs  cache.rs  climate.rs  continent.rs  lib.rs  main.rs  params.rs  planet.rs  progress.rs  rasterize.rs  region.rs  render.rs
game/procgen/src/region/: feature.rs  mod.rs  region.rs  regions.rs  row_scanning.rs  subfeature.rs  unit.rs
game/resources/: Cargo.toml
game/resources/src/: container.rs  error.rs  lib.rs  resource.rs
game/simulation/: Cargo.toml
game/simulation/ecs-derive/: Cargo.toml
game/simulation/ecs-derive/src/: lib.rs
game/simulation/src/: alloc.rs  backend.rs  dev.rs  ecs.rs  entity_builder.rs  lib.rs  movement.rs  perf.rs  physics.rs  queued_update.rs  render.rs  simulation.rs  spatial.rs  species.rs  string.rs  transform.rs  voxel_world.rs  world_debug.rs
game/simulation/src/activity/: activity.rs  activity2.rs  context.rs  event_logging.rs  mod.rs  status.rs  system.rs  system2.rs
game/simulation/src/ai/: action.rs  context.rs  dev.rs  input.rs  mod.rs  system.rs
game/simulation/src/definitions/: builder.rs  component.rs  mod.rs  registry.rs
game/simulation/src/ecs/: component.rs  debug.rs  entity.rs  mod.rs  name.rs  tag.rs  template.rs  world.rs  world_ext.rs
game/simulation/src/event/: component.rs  mod.rs  pubsub.rs  (+3 more)
game/src/: main.rs
game/world/: Cargo.toml
game/world/benches/: terrain.rs
game/world/src/: block.rs  context.rs  grid.rs  lib.rs  mesh.rs  neighbour.rs  occlusion.rs  presets.rs  viewer.rs  world.rs  world_ref.rs
game/world/world_types/: Cargo.toml
grid/: Cargo.toml
grid/src/: declare.rs  dynamic.rs  grid_impl.rs  lib.rs
misc/: Cargo.toml
misc/src/: dynslot.rs  lib.rs  newtype.rs  random.rs  sized_iter.rs
physics/: Cargo.toml
physics/bulletc-sys/: Cargo.toml  build.rs
physics/bulletc-sys/bulletc/: CMakeLists.txt  bulletc.cpp  bulletc.hpp  common.hpp  dynworld.cpp  dynworld.hpp  entity_collider.cpp  example.cpp
physics/bulletc-sys/src/: bulletc.rs  lib.rs
physics/debug-draw/: Cargo.toml
physics/debug-draw/src/: lib.rs
physics/src/: collider.rs  lib.rs  world.rs
renderer/engine/: Cargo.toml
renderer/engine/shaders/: world.glslf
renderer/engine/src/: engine.rs  lib.rs  lite.rs  panic.rs
renderer/main/: Cargo.toml  build.rs
renderer/main/src/: main.rs  scenarios.rs
shared/common/: Cargo.toml
shared/common/src/: block.rs  dynslot.rs  input.rs  lib.rs  newtype.rs  panic.rs  random.rs
shared/grid/: Cargo.toml
shared/grid/src/: declare.rs  dynamic.rs  grid_impl.rs  impl.rs  lib.rs
shared/logging/: Cargo.toml
shared/logging/src/: elastic.rs  init.rs  lib.rs  tests.rs
shared/metrics/: Cargo.toml  README.md  prometheus.yml
shared/metrics/src/: lib.rs
shared/struclog/: Cargo.toml
shared/struclog/src/: lib.rs  macro.rs
shared/unit/: Cargo.toml
shared/unit/src/: coordinate.rs  dim.rs  hunger.rs  length.rs  lib.rs  mod.rs  scale.rs  screen.rs  view.rs  volume.rs
simulation/: Cargo.toml
simulation/src/: backend.rs  ecs.rs  lib.rs  movement.rs  physics.rs  render.rs  simulation.rs  sync.rs  transform.rs
simulation/src/path/: debug.rs  follow.rs  mod.rs  system.rs
simulation/src/steer/: behaviour.rs  mod.rs  system.rs
struclog/: Cargo.toml
struclog/src/event/: mod.rs
struclog/src/sink/: ipc.rs  mod.rs
struclog/src/span/: mod.rs
testing/: Cargo.toml
testing/src/: helpers.rs  lib.rs  main.rs
testing/src/tests/: build.rs  dummy.rs  equip_with_pickup.rs  haul.rs  mod.rs  template.rs
tweaker/: Cargo.toml  ui.sh
tweaker/src/: error.rs  lib.rs  tweaker.rs  value.rs
tweaker/ui/: add.py  requirements.txt  server.py  store.py  tweaker.json  ui.py
unit/: Cargo.toml
unit/src/: coordinate.rs  dim.rs  food.rs  lib.rs
unit/src/space/: length.rs  mod.rs  view.rs  volume.rs
unit/src/world/: block_position.rs  chunk_location.rs  grid.rs  mod.rs  range.rs  slab_index.rs  slab_location.rs  slab_position.rs  slice_block.rs  slice_index.rs  world_point.rs  world_position.rs
utils/ai-curve-vis/: Cargo.toml
world/: Cargo.toml
world/benches/: terrain.rs
world/src/: block.rs  chunk.rs  context.rs  coordinate.rs  generate.rs  grid.rs  lib.rs  mesh.rs  navigation.rs  neighbour.rs  occlusion.rs  presets.rs  ray.rs  slice.rs  viewer.rs  world.rs  world_ref.rs
world/src/area/: area_navigation.rs  block_navigation.rs  boundary.rs  discovery.rs  graph.rs  mod.rs  path.rs
world/src/chunk/: affected_neighbours.rs  builder.rs  chunk.rs  double_sided_vec.rs  mod.rs  slab.rs  slice.rs  slice_navmesh.rs  terrain.rs
world/src/loader/: batch.rs  finalizer.rs  loading.rs  mod.rs  update.rs  worker_pool.rs
world/src/navigation/: area_navigation.rs  block_navigation.rs  discovery.rs  graph.rs  mod.rs  nav.rs  path.rs  search.rs
world/src/navigationv2/: accessible.rs  mod.rs  plot_accessibility.py  world_graph.rs
(+420 files in other folders)
