[workspace]

members = [
	"game/ai",
	"game/procgen",
	"game/resources",
	"game/simulation",
	"game/simulation/ecs-derive",
	"game/world",

	"renderer/engine",
	"renderer/main",

	"shared/color",
	"shared/common",
	"shared/config",
	"shared/grid",
	"shared/metrics",
	"shared/logging",
	"shared/unit",
]

[profile.dev]
debug = 0 # for faster build times

[profile.dev.package."procgen"]
opt-level = 2 # this is way too slow in debug mode
