[package]
name = "ai"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
misc = { path = "../misc" }

serde = {version = "1.0", features = ["derive"], optional = true}

[features]
default = []
logging = []
deserialize = ["serde"]
