[package]
name = "common"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
log = "0.4"
cgmath = "0.17"
num-traits = "0.2"
itertools = "0.8"
rand = "0.7"
env_logger = {version = "0.7", optional = true}

# TODO feature for cgmath
[features]
default = []
binary = ["log/release_max_level_info", "env_logger"]