[package]
name = "engine"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = {path = "../world"}
tweaker = {path = "../tweaker"}
sdl2 = "0.32"
glium_sdl2 = {git = "https://github.com/DomWilliams0/glium-sdl2"}
glium = "0.25"
cgmath = "0.17"
enum-map = "0.6"
num-traits = "0.2"
