[package]
name = "engine"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# removed until cargo-travis uses cargo 0.37+
# default-run = "engine"

[dependencies]
world = {path = "../world"}
tweaker = {path = "../tweaker"}
simulation = {path = "../simulation"}
gameloop = {path = "../gameloop"}
scale = {path = "../scale"}
sdl2 = "0.32"
glium_sdl2 = {git = "https://github.com/DomWilliams0/glium-sdl2"}
cgmath = "0.17"
enum-map = "0.6"
num-traits = "0.2"
float-ord = "0.2"
log = {version = "0.4", features = ["release_max_level_info"]}
env_logger = "0.7"

[dependencies.glium]
version = "0.25"
default-features = false  # removes glutin
