[package]
name = "engine"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# removed until cargo-travis uses cargo 0.37+
# default-run = "engine"

[dependencies]
world = {path = "../world"}
config = {path = "../config"}
simulation = {path = "../simulation"}
gameloop = {path = "../gameloop"}
unit = {path = "../unit"}
common = {path = "../common"}
sdl2 = {version = "0.32", optional = true}
glium_sdl2 = {git = "https://github.com/DomWilliams0/glium-sdl2", optional = true}
enum-map = "0.6"
float-ord = "0.2"

[dependencies.glium]
version = "0.25"
default-features = false  # removes glutin

[features]
default = []
sdl-glium = ["sdl2", "glium_sdl2"]
lite = []