[package]
name = "game-presets"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = {path = "../world"}
simulation = {path = "../simulation"}
config = {path = "../config"}
common = { path = "../common"}
color = { path = "../color"}
