[package]
name = "misc"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logging = { path = "../logging" }

tracy-client = { version = "0.15", default-features = false }

lazy_static = "1.4"
glam = "0.21"
num-traits = "0.2"
itertools = "0.10"
rand = { version = "0.7", features = ["small_rng"] } # updating to 0.8 changes terrain seeds
float-cmp = "0.9"
derive_more = "0.99"
ordered-float = "2.0"
thiserror = "1.0"
bumpalo = { version = "3.9", features = ["collections", "boxed"] }
smallvec = { version = "1.10", features = ["union", "const_generics"] }
arrayvec = "0.7"
parking_lot = "0.12"
derivative = "2.2"

# TODO feature for cgmath
[features]
default = ["library"]
binary = ["logging/binary"]
library = []
log-to-file = ["logging/to-file"]
profiling = ["tracy-client/enable", "tracy-client/sampling", "tracy-client/code-transfer", "tracy-client/system-tracing", "tracy-client/fibers"]
