[package]
name = "simulation"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = {path = "../world"}
unit = {path = "../unit"}
physics = {path = "../physics"}
config = {path = "../config"}
debug-draw = { path = "../physics/debug-draw" }
cgmath = "0.17"
log = "0.4"
env_logger = "0.7"
rand = "0.7"
pyro = "0.2"
