[package]
name = "simulation"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = {path = "../world"}
unit = {path = "../unit"}
physics = {path = "../physics"}
config = {path = "../config"}
debug-draw = { path = "../physics/debug-draw" }
common = { path = "../common" }
pyro = "0.2"

[dev-dependencies]
game-presets = { path = "../game-presets" }
