[package]
name = "struclog"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "^0.10"
lazy_static = "^1.4"
log = "^0.4"
unix-named-pipe = "^0.2"
serde = {version = "^1.0", features = ["derive"], optional = true }
serde_json = {version = "^1.0", optional = true }
# TODO bincode = {version = "^1.2", optional = true}

[features]
default = ["ipc"]
trace = []
verbose = []
info = []
error = []
ipc = ["serde", "serde_json"]
