[package]
name = "tweaker"
version = "0.2.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
serde_json = "1.0"
serde = "1.0"
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
num-traits = "0.2"
