[package]
name = "world"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unit = {path = "../unit"}
physics = {path = "../physics"}
config = {path = "../config"}
common = { path = "../common" }
color = { path = "../color" }
generator = "0.6"
petgraph = "0.4"
float-cmp = "0.5"
nd_iter = "0.0.4"
ordered-float = "1.0"

[dev-dependencies]
matches = "0.1"
