[package]
name = "world"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unit = { path = "../unit" }
misc = { path = "../misc" }
color = { path = "../color" }
grid = { path = "../grid" }

petgraph = "0.6"
nd_iter = "0.0"
strum = { version = "0.19", features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
tokio = { version = "1.0", default-features = false, features = ["time", "rt", "rt-multi-thread", "sync"] }
async-trait = "0.1"

[features]
worldprocgen = []

[dev-dependencies]
criterion = "0.3"
num_cpus = "1.13"

[[bench]]
name = "terrain"
harness = false
