[package]
name = "world"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unit = { path = "../unit" }
misc = { path = "../misc" }
color = { path = "../color" }
grid = { path = "../grid" }

petgraph = "0.6"
nd_iter = "0.0"
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
tokio = { version = "1.0", default-features = false, features = ["time", "rt", "rt-multi-thread", "sync"] }
async-trait = "0.1"
array-init = "2.1"
bitbybit = "1.1"
arbitrary-int = "1.2"
ahash = "0.8"
md-5 = "0.10"
strum = { version = "0.19", features = ["derive"] }
crossbeam = "0.8"
spiral = "0.2"
enumflags2 = "0.7"
slice-group-by = "0.3"

backtrace = { version = "0.3", optional = true }

[features]
default = ["log-lock-delay"]
worldprocgen = []
log-lock-delay = ["backtrace"]

[dev-dependencies]
criterion = "0.3"
num_cpus = "1.13"
rstest = "0.17"


[[bench]]
name = "terrain"
harness = false
