[package]
name = "ai"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../shared/common" }

float-ord = "0.2"
derivative = "2.2"

[features]
default = []
logging = []
