[package]
name = "physics"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulletc-sys = { path = "bulletc-sys" }
debug-draw = { path = "debug-draw" }

unit = { path = "../../shared/unit" }
common = { path = "../../shared/common" }
config = { path = "../../shared/config" }
