[package]
name = "procgen"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../shared/common" }
unit = { path = "../../shared/unit" }
grid = { path = "../../shared/grid", default-features = false, features = ["8neighbours"] }
color = { path = "../../shared/color", optional = true }
noise = "0.6"
rand_distr = "0.3"
strum = "0.19"
strum_macros = "0.19"
array-init = "1.0"
tokio = { version = "1.0", default-features = false, features = ["rt", "rt-multi-thread", "sync", "time"] }
futures = { version = "0.3", default-features = false, features = ["std", "alloc"] }
geo = "0.16"
geo-booleanop = "0.3"
rstar = "0.8"

line_drawing = { version = "0.8", optional = true }
crossbeam = { version = "0.8", optional = true }
async-trait = { version = "0.1", optional = true }
async-scoped = { version = "0.6.0", features = ["use-tokio"], optional = true }

image = { version = "0.23", optional = true, default-features = false, features = ["png"] }
imageproc = { version = "0.22", optional = true, default-features = false }

structopt = "0.2"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
bincode = { version = "1.3", optional = true }
sha2 = { version = "0.9", optional = true }

[features]
default = []
bin = ["image", "imageproc", "color", "async-trait", "async-scoped"]
climate = ["crossbeam", "line_drawing"]
cache = ["bincode", "sha2", "geo/use-serde"]


[dev-dependencies]
# same as above but including macros feature
tokio = { version = "1.0", default-features = false, features = ["macros"] }
