[package]
name = "procgen"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../shared/common" }
unit = { path = "../../shared/unit" }
grid = { path = "../../shared/grid", default-features = false, features = ["8neighbours"] }
color = { path = "../../shared/color", optional = true }
resources = { path = "../resources" }
noise = { version = "0.6", default-features = false } # 0.7 changes noise parameters, avoid upgrade for now
rand_distr = "0.3" # cannot be upgraded until rand can be too (to 0.8)
strum = { version = "0.19", features = ["derive"] }
tokio = { version = "1.0", default-features = false, features = ["rt", "rt-multi-thread", "sync", "time"] }
futures = { version = "0.3", default-features = false, features = ["std", "alloc", "async-await"] }
geo = "0.16"
geo-booleanop = "0.3"
spiral = "0.1"

line_drawing = "1.0"
crossbeam = { version = "0.8", optional = true }
async-trait = { version = "0.1", optional = true }
async-scoped = { version = "0.7", features = ["use-tokio"], optional = true }

image = { version = "0.23", optional = true, default-features = false, features = ["png"] }
imageproc = { version = "0.22", optional = true, default-features = false }
panik = { version = "0.2", optional = true, default-features = false, features = ["use-slog", "use-parking-lot"] }

structopt = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
ron = "0.7"
bincode = { version = "1.3", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = []
bin = ["image", "imageproc", "color", "async-trait", "async-scoped", "panik"]
climate = ["crossbeam", "async-trait"]
cache = ["bincode", "sha2", "geo/use-serde"]
benchmarking = []


[dev-dependencies]
# same as above but including macros feature
tokio = { version = "1.0", default-features = false, features = ["macros"] }
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
name = "region"
harness = false
