[package]
name = "simulation"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
#crate-type = ["dylib"]

[dependencies]
world = {path = "../world"}

unit = {path = "../../shared/unit"}
config = {path = "../../shared/config"}
common = { path = "../../shared/common", features=["library"] }
color = { path = "../../shared/color" }
ai = { path = "../ai" }

specs = {version = "^0.16", default-features = false} # no parallel
specs-derive = "^0.4"
crossbeam = "^0.7"
ux = "^0.1"
arraydeque = "^0.4"
ahash = "^0.4"


[dev-dependencies]
polymap = "^0.3"
matches = "^0.1"

[features]
default = []
metrics = ["ai/logging"]