[package]
name = "simulation"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = { path = "../world" }

unit = { path = "../../shared/unit" }
config = { path = "../../shared/config" }
common = { path = "../../shared/common" }
color = { path = "../../shared/color" }
ai = { path = "../ai" }
resources = { path = "../resources" }
ecs-derive = { path = "ecs-derive" }

specs = { version = "0.16", default-features = false } # no parallel
specs-derive = "0.4"
ux = "0.1"
arraydeque = "0.4"
ahash = "0.7"
inventory = "0.1"
daggy = "0.7"
strum = "0.19"
strum_macros = "0.19"
bitflags = "1.2"
sortedvec = "0.5"

ron = "0.6"
serde = "1.0"
hex-serde = "0.1"

rlua = { version = "0.17", optional = true }

[features]
default = ["scripting"]
metrics = ["ai/logging", "common/metrics"]
scripting = ["rlua"]
