[package]
name = "simulation"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = { path = "../world" }
world_types = { path = "../world/world_types" }

unit = { path = "../../shared/unit" }
config = { path = "../../shared/config" }
common = { path = "../../shared/common" }
color = { path = "../../shared/color" }
ai = { path = "../ai" }
resources = { path = "../resources" }
markov = { path = "../markov" }
ecs-derive = { path = "ecs-derive" }

specs = { version = "0.17", default-features = false } # no parallel
specs-derive = "0.4"
ux = "0.1"
arraydeque = "0.4"
ahash = "0.7"
inventory = "0.1"
daggy = "0.8"
strum = { version = "0.19", features = ["derive"] }
bitflags = "1.2"
sortedvec = "0.5"
rbl_circular_buffer = "0.1"
futures = "0.3"
cooked-waker = "5.0"
async-trait = "0.1"
ustr = "0.8"
enumflags2 = "0.7"

ron = "0.7"
serde = "1.0"
hex-serde = "0.1"

rlua = { version = "0.19", optional = true }

[features]
default = []
procgen = ["world/procgen"]
metrics = ["ai/logging", "common/metrics"]
scripting = ["rlua"]
testing = []
utils = []
