[package]
name = "world"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unit = {path = "../../shared/unit"}
config = {path = "../../shared/config"}
common = { path = "../../shared/common" }
color = { path = "../../shared/color" }
procgen = { path = "../procgen", default-features = false } # no bin

petgraph = "^0.5"
float-cmp = "^0.6"
nd_iter = "0.0.4"
threadpool = "^1.8"
crossbeam = "^0.7"
spiral = "^0.1"
enum-iterator = "^0.6"

[dev-dependencies]
matches = "^0.1"
env_logger = "^0.7"
criterion = "^0.3"

[[bench]]
name = "terrain"
harness = false
