[package]
name = "world"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unit = {path = "../../shared/unit"}
config = {path = "../../shared/config"}
common = { path = "../../shared/common" }
color = { path = "../../shared/color" }
grid = { path = "../../shared/grid" }
procgen = { path = "../procgen", default-features = false } # no bin

petgraph = "^0.5"
nd_iter = "0.0.4"
threadpool = "^1.8"
enum-iterator = "^0.6"
futures = { version = "^0.3", default-features = false, features = ["std", "executor"] }
tokio = { version = "^1.0", default-features = false, features = ["time", "rt", "rt-multi-thread", "sync"]}

[dev-dependencies]
matches = "^0.1"
criterion = "^0.3"

[[bench]]
name = "terrain"
harness = false
