[package]
name = "bulletc-sys"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "^0.1"
bindgen = "^0.53"

[dependencies]

[dev-dependencies]
common = { path = "../../common" }
