[package]
name = "engine"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# removed until cargo-travis uses cargo 0.37+
# default-run = "engine"

[dependencies]
simulation = { path = "../../game/simulation" }
resources = { path = "../../game/resources" }

config = { path = "../../shared/config" }
unit = { path = "../../shared/unit" }
common = { path = "../../shared/common" }
color = { path = "../../shared/color" }

gameloop = "^0.2"
sdl2 = { version = "^0.34", optional = true, features = ["bundled"] }
gl = { version = "^0.14", optional = true }
imgui-sdl2 = { version = "^0.12", optional = true}
imgui-opengl-renderer = { version = "^0.9", optional = true}
imgui = { version = "^0.5", optional = true }

backtrace = "^0.3"

[features]
default = []
use-sdl = ["sdl2", "gl", "imgui-sdl2", "imgui-opengl-renderer", "imgui"]
lite = []
gl-trace-log = []
