[package]
name = "engine"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# removed until cargo-travis uses cargo 0.37+
# default-run = "engine"

[dependencies]
simulation = { path = "../../game/simulation" }
resources = { path = "../../game/resources" }
testing = { path = "../../testing", optional = true }

config = { path = "../../shared/config" }
unit = { path = "../../shared/unit" }
common = { path = "../../shared/common" }
color = { path = "../../shared/color" }

panik = { version = "0.2", default-features = false, features = ["use-parking-lot", "use-slog"] }
gameloop = "0.2"
sdl2 = { version = "0.34", optional = true }
sdl2-sys = { version = "0.34", optional = true }
gl = { version = "0.14", optional = true }
imgui-sdl2 = { version = "0.14", optional = true }
imgui-opengl-renderer = { version = "0.11", optional = true }
imgui = { version = "0.7", optional = true }
rusttype = { version = "0.9", optional = true, features = ["gpu_cache"] }

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[features]
default = ["common/log-to-file", "panik/use-slog", "common/binary", "scripting"]
use-sdl = ["sdl2", "sdl2-sys", "gl", "imgui-sdl2", "imgui-opengl-renderer", "imgui", "rusttype"]
procgen = ["simulation/procgen"]
metrics = ["simulation/metrics"]
lite = []
gl-trace-log = []
scripting = ["simulation/scripting"]
hook = ["testing", "testing/testing"] # for testing lmao
