[package]
name = "engine"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# removed until cargo-travis uses cargo 0.37+
# default-run = "engine"

[dependencies]
simulation = { path = "../../game/simulation" }
resources = { path = "../../game/resources" }
testing = { path = "../../testing", optional = true }

config = { path = "../../shared/config" }
unit = { path = "../../shared/unit" }
common = { path = "../../shared/common" }
color = { path = "../../shared/color" }

panik = { version = "0.2", default-features = false, features = ["use-parking-lot", "use-slog"] }
gameloop = "0.2"
sdl2 = { version = "0.34", optional = true }
sdl2-sys = { version = "0.34", optional = true }
gl = { version = "0.14", optional = true }
imgui-sdl2 = { git = "https://github.com/MFEK/rust-imgui-sdl2", rev = "7ce849fd5df90ccf4a278334b492349fc828ae40", optional = true }
imgui-opengl-renderer = { git = "https://github.com//eliaperantoni/rust-imgui-opengl-renderer", rev = "e80b5f21cefea355b9f8932f895f5592bd02a4ee", optional = true }
imgui = { version = "0.8", optional = true }
rusttype = { version = "0.9", optional = true, features = ["gpu_cache"] }

serde = { version = "1.0", features = ["derive"] }
ron = "0.7"

[features]
default = ["common/log-to-file", "panik/use-slog", "common/binary", "scripting"]
use-sdl = ["sdl2", "sdl2-sys", "gl", "imgui-sdl2", "imgui-opengl-renderer", "imgui", "rusttype"]
procgen = ["simulation/procgen"]
metrics = ["simulation/metrics"]
lite = []
gl-trace-log = []
scripting = ["simulation/scripting"]
hook = ["testing", "testing/testing"] # for testing lmao
