[package]
name = "main"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = {path = "../engine"}

simulation = {path = "../../game/simulation"}

config = {path = "../../shared/config"}
common = { path = "../../shared/common", features = ["binary"] }
color = { path = "../../shared/color"}

alloc_counter = {version = "^0.0", optional = true}
num_cpus = "1.13"

clap = "^2.33"

[features]
default = ["use-sdl"]
use-sdl = ["engine/use-sdl"]
lite = ["engine/lite"]
count-allocs = ["alloc_counter"]
metrics = ["simulation/metrics"]
