[package]
name = "main"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }

simulation = { path = "../../game/simulation" }
resources = { path = "../../game/resources" }

config = { path = "../../shared/config" }
common = { path = "../../shared/common", features = ["binary"] }
color = { path = "../../shared/color" }
panik = { version = "0.2", default-features = false, features = ["use-parking-lot"] }

alloc_counter = { version = "0.0", optional = true }
num_cpus = "1.13"
inventory = "0.1"
argh = "0.1"

[features]
default = ["use-sdl", "common/log-to-file", "panik/use-slog", "common/binary", "simulation/scripting"]
use-sdl = ["engine/use-sdl"]
lite = ["engine/lite"]
count-allocs = ["alloc_counter"]
metrics = ["simulation/metrics"]
