[package]
name = "main"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }

resources = { path = "../../game/resources" }
testing = {path = "../../testing", optional = true}

config = { path = "../../shared/config" }
common = { path = "../../shared/common", features = ["binary"] }
color = { path = "../../shared/color" }
panik = { version = "0.2", default-features = false, features = ["use-parking-lot"] }

num_cpus = "1.13"
inventory = "0.1"
argh = "0.1"
jemallocator = "0.3"

[features]
default = ["use-sdl", "procgen"]
procgen = ["engine/procgen"]
use-sdl = ["engine/use-sdl"]
lite = ["engine/lite"]
metrics = ["engine/metrics"]
tests = ["engine/hook", "testing"]
profiling = ["common/profiling"]