[package]
name = "common"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
struclog = { path = "../struclog" }
metrics = { path = "../metrics" }

lazy_static = "^1.4"
log = "^0.4"
cgmath = "^0.17"
num-traits = "^0.2"
itertools = "^0.9"
rand = "^0.7"
env_logger = {version = "^0.7", optional = true}
float-cmp = "^0.5"
derive_more = "^0.99"
ordered-float = "^1.0"
thiserror = "1.0"

# TODO feature for cgmath
[features]
default = []
# struclog sinks must be the same for both
binary = ["log/release_max_level_info", "env_logger", "struclog/trace", "struclog/null"]
library = ["struclog/trace", "struclog/null"]