[package]
name = "common"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = { path = "../metrics" }
logging = { path = "../logging" }

lazy_static = "^1.4"
cgmath = "^0.17"
num-traits = "^0.2"
num-derive = "^0.3"
itertools = "^0.9"
rand = "^0.7"
float-cmp = "^0.8"
derive_more = "^0.99"
parse-display = "^0.1"
ordered-float = "^2.0"
thiserror = "^1.0"
bumpalo = {version = "^3.4", features = ["collections"]}
smallvec = "^1.4"
arrayvec = "^0.5"

# TODO feature for cgmath
[features]
default = ["library"]
binary = ["logging/binary"]
library = []
