[package]
name = "common"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = { path = "../metrics", optional = true }
logging = { path = "../logging" }

lazy_static = "1.4"
cgmath = "0.18"
num-traits = "0.2"
num-derive = "0.3"
itertools = "0.10"
rand = { version = "0.7", features = ["small_rng"] } # updating to 0.8 changes terrain seeds
float-cmp = "0.9"
derive_more = "0.99"
parse-display = "0.5"
ordered-float = "2.0"
thiserror = "1.0"
bumpalo = { version = "3.9", features = ["collections", "boxed"] }
smallvec = {version = "1.6", features = ["union"]}
arrayvec = "0.7"
boolinator = "2.4"
parking_lot = "0.12"
backtrace = "0.3"
displaydoc = "0.2"
derivative = "2.2"
tracy-client = { version = "0.12", default-features = false }
rstar = "0.9"
strum = { version = "0.19", features = ["derive"] }

# TODO feature for cgmath
[features]
default = ["library"]
binary = ["logging/binary"]
library = []
log-to-file = ["logging/to-file"]
profiling = ["tracy-client/enable"]
