[package]
name = "logging"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = {version = "^2.5", default-features = false, features = ["max_level_trace", "release_max_level_info"]}
slog-scope = {git = "https://github.com/DomWilliams0/scope"}
slog-term = {version = "^2.5", optional = true}
slog-async = {version = "^2.5", optional = true}
once_cell = "^1.4"

ureq = {version = "^1.4", optional = true, default-features = false}
serde = {version = "^1.0", optional = true}
serde_json = {version = "^1.0", optional = true, features = ["raw_value"]}
rand = {version = "^0.7", optional = true}

[features]
default = ["binary"]
binary = ["slog-term", "slog-async"]
elasticsearch = ["ureq", "serde", "serde_json", "rand"]