[package]
name = "logging"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# limit release builds to info+
slog = { version = "2.5", default-features = false, features = ["max_level_trace", "release_max_level_info"] }
slog-scope = { git = "https://github.com/DomWilliams0/scope" }
slog-term = { version = "2.5", optional = true }
slog-async = { version = "2.5", optional = true }
once_cell = "1.4"

[features]
default = ["binary"]
binary = ["slog-term", "slog-async"]
to-file = []
