[package]
name = "unit"
version = "0.1.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
grid = { path = "../grid" }

newtype_derive = "0.1"
paste = "1.0"