[package]
name = "ai-curve-vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../shared/common" }
ai = { path = "../../game/ai", features = ["deserialize"] }
ron = "0.7"
plotters = "0.3"